yet another schema update, add preprocessing after step execution